Bug 130174 - Pressing Accept in Manage Changes doesn't highlight the next change
Summary: Pressing Accept in Manage Changes doesn't highlight the next change
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.5.0
Keywords: bibisected, bisected, needUITest, regression
Depends on:
Blocks:
 
Reported: 2020-01-24 13:41 UTC by Eltomito
Modified: 2020-02-10 23:16 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
before clicking accept (168.97 KB, image/png)
2020-01-24 13:42 UTC, Eltomito
Details
After clicking Accept - the expected state (167.49 KB, image/png)
2020-01-24 13:43 UTC, Eltomito
Details
After clicking Accept - the actual state (172.73 KB, image/png)
2020-01-24 13:43 UTC, Eltomito
Details
A document with recorded changes. Use it to verify the bug. (4.41 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-01-24 15:23 UTC, Eltomito
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eltomito 2020-01-24 13:41:26 UTC
Description:
When using the Manage Changes dialog, pressing Accept on a change doesn't highlight the next change in the Writer window.

It may sound like a minor bug but it's extremely annoying and makes it impossible to review changes by just pressing Accept repeatedly when everything is okay, because except for the first change, you don't see what you're accepting.

This bug only appeared in 6.5.0.0, it isn't present in the 6.4. series.
It appears regardless of the VCL backend, i.e., under both X11 and gtk3.

About:

Version: 6.5.0.0.alpha0+
Build ID: b203b9c83d0000c8465dcd92fb6b029a2f28c724
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-01-14_09:44:21
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded


Steps to Reproduce:
1. Make a .docx writer document with two or more recorded changes. 
2. Open Edit->Track Changes->Manage
3. Try clicking Accept in the Manage Changes dialog several times.

Actual Results:
The highlight in the Writer window only appears on the very first change and disappears as soon as Accept in the Manage Changes dialog is clicked.

Expected Results:
The highlight in the Writer window should always reflect the change highlighted in the Manage Changes dialog.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Comment 1 Eltomito 2020-01-24 13:42:34 UTC
Created attachment 157400 [details]
before clicking accept
Comment 2 Eltomito 2020-01-24 13:43:22 UTC
Created attachment 157401 [details]
After clicking Accept - the expected state
Comment 3 Eltomito 2020-01-24 13:43:50 UTC
Created attachment 157402 [details]
After clicking Accept - the actual state
Comment 4 Eltomito 2020-01-24 15:23:45 UTC
Created attachment 157403 [details]
A document with recorded changes. Use it to verify the bug.
Comment 5 Xisco Faulí 2020-01-24 19:28:59 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=19116d1061b287eef600ec6b3f46c362a4abd405

author	Caolán McNamara <caolanm@redhat.com>	2019-11-20 10:05:48 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2019-11-20 13:41:32 +0100
commit 19116d1061b287eef600ec6b3f46c362a4abd405 (patch)
tree 8fe747c4b27aa9156163adaba410eaa635712a6c
parent eee6ef53ebc5756a974e985925550dcd990876ca (diff)
consistency wrt notification events for treeview cursor change

Bisected with: bibisect-linux64-6.5

Adding Cc: to Caolán McNamara
Comment 6 Commit Notification 2020-01-25 21:45:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9ce254a7797405b3b655ba4e5be2190cddad2902

Resolves: tdf#130174 explicitly call SelectHdl

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2020-01-27 17:56:08 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 47c598260a8f07cf3a1e4cab061df3f2d261932c
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!
Comment 8 Eltomito 2020-02-10 23:16:39 UTC
Thank you for fixing this bug! I've just verified the fix in
Version: 7.0.0.0.alpha0+
Build ID: d1d328441118fb978cf3233a461ad95bdb092934
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-02-07_04:59:38
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded