Resolves: tdf#130174 explicitly call SelectHdl

Change-Id: Ibda5c3595f8e02bba9faa027f4c90762aa817b42
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87418
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>